Attempting mobile dropdown spacing fix 2

--- a/navbar_and_footer_styles.css
+++ b/navbar_and_footer_styles.css
@@ -40,12 +40,12 @@ Navbar
 
     z-index: 100;
 }
-
+/*
 @media (max-width: 800px) {
     .navbar {
         height: 2.5rem;
     }
-}
+}*/
 
 .navbar_home, .navbar_home.visited {
     position: relative;
@@ -93,9 +93,12 @@ Navbar
 
 .drop_button {
     font-family: 'Baloo 2';
-    font-size: 1.75rem;
-    padding-top: 25%;
+   font-size: 1.75rem;
+    height: 100%;
+    padding-top: 40%;
+    padding-bottom: 20%;
 
+    float:right;
     background-color: #6767e0;
     color: white;
 
@@ -104,11 +107,6 @@ Navbar
     cursor: pointer;
 }
 
-@media (max-width: 800px) {
-    .drop_button {
-        height: 3.75rem;
-    }
-}
 
 
 /*
@@ -121,12 +119,13 @@ dropdown
 
 @media (max-width: 800px) {
     .dropdown {
-        display: inline-block;
+        display: block;
     }
 }
 .dropdown-content {
     display: none;
-    top: 100%;
+    margin-top: -0.1rem;
+
     background-color: #6767e0;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
